Improves Docker setup with user permission handling
Enhances the Docker configuration to handle user permissions
correctly, avoiding file ownership issues.

Adds support for specifying USER_ID and GROUP_ID via environment
variables, allowing the container to run with the host user's
permissions. This prevents "dubious ownership" problems when
working with Git repositories inside the container.

Initializes the example package as a Git repository, configuring
the user identity, adding all files, creating an initial commit, and
setting the right permissions for the .git directory. This also
automatically initializes the example-package if it exists but doesn't
have a .git directory.

Updates the watcher script to ensure Git knows who the user is.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
 services:
   satis:
-    build: .
+    build:
+      context: .
+      args:
+        # Use environment variables with fallback to default values
+        USER_ID: ${USER_ID:-1000}
+        GROUP_ID: ${GROUP_ID:-1000}
     ports:
-      - "9000:80"
+      - "9000:8080"
     volumes:
       - ./repos:/repos
       - ./satis:/build
