--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         USER_ID: ${USER_ID:-1000}
         GROUP_ID: ${GROUP_ID:-1000}
     ports:
-      - "9000:8080"
+      - "${PORT:-9000}:8080"
     volumes:
       - ./repos:/repos
       - ./satis:/build
